--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,6 +1,6 @@
 /******* Customized Bootstrap ********/
 
-$primary: #6244C5;
+$primary: #c3bcdc;
 $secondary: #e9e3d8;
 $light: #FAFAFB;
 $dark: #12141D;
